(Certain) shapekeys stopped working in 2.8 #60783

Closed
opened 2019-01-23 06:20:21 +01:00 by Daniel Salazar · 16 comments
Member

System Information
Operating system: Windows 10 64
Graphics card: GTX 1080

Blender Version
Broken: dc3b5024be

Short description of error
Recent builds broke shapekeys on this object. If you delete all shapekeys including base and add a new shapekey it will work.

ShapekeyBug.blend

Exact steps for others to reproduce the error
Open provided blend file and change value of shapekey 01. Nothing will happen even when the shapekey should show a deformation

**System Information** Operating system: Windows 10 64 Graphics card: GTX 1080 **Blender Version** Broken: dc3b5024be1a **Short description of error** Recent builds broke shapekeys on this object. If you delete all shapekeys including base and add a new shapekey it will work. [ShapekeyBug.blend](https://archive.blender.org/developer/F6375315/ShapekeyBug.blend) **Exact steps for others to reproduce the error** Open provided blend file and change value of shapekey 01. Nothing will happen even when the shapekey should show a deformation
Author
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo

#60858 was marked as duplicate of this issue

#60858 was marked as duplicate of this issue
Member

Added subscribers: @mont29, @lichtwerk

Added subscribers: @mont29, @lichtwerk
Member

Not sure if this has the same roots as #60401, #60249
There was also the fix by @mont29 (47be4e9a33)

But I can confirm example file is not working in 2.8 (if you append this into 2.79 it is working though...)

Not sure if this has the same roots as #60401, #60249 There was also the fix by @mont29 (47be4e9a33) But I can confirm example file is not working in 2.8 (if you append this into 2.79 it is working though...)
Philipp Oeser changed title from Shapekeys stopped working in 2.8 to (Certain) shapekeys stopped working in 2.8 2019-01-23 11:57:51 +01:00
Bastien Montagne self-assigned this 2019-01-23 14:00:10 +01:00

Will check that

Will check that

This is kind of expected, since this mesh's shpaekey does not have the 'user' ('from') pointer set properly. This makes it a corrupted file, so what we need here is a way to reproduce such error.

(If you remove all shapekeys and add new one, everything works as expected).

This is kind of expected, since this mesh's shpaekey does not have the 'user' ('from') pointer set properly. This makes it a corrupted file, so what we need here is a way to reproduce such error. (If you remove all shapekeys and add new one, everything works as expected).
Member

just out of pure interest: are we stricter here in 2.8? (since 2.79 handles the appended ob nicely?)

just out of pure interest: are we stricter here in 2.8? (since 2.79 handles the appended ob nicely?)

Yes, since shapekeys are now often evaluated in CoW context (i.e. with IDs that are not orig ones), the 'fix' that was setting 'from' pointer to correct ID when it was NULL is no more valid, and had to be removed (47be4e9a33).

In any case, doing that sort of on-the-fly fixes is very, very bad practice, since it allows real bug(s) to remain unnoticed forever. So now we need to know how that bloody pointer can get NULLified.

Yes, since shapekeys are now often evaluated in CoW context (i.e. with IDs that are not orig ones), the 'fix' that was setting 'from' pointer to correct ID when it was NULL is no more valid, and had to be removed (47be4e9a33). In any case, doing that sort of on-the-fly fixes is very, very bad practice, since it allows real bug(s) to remain unnoticed forever. So now we need to know how that bloody pointer can get NULLified.
Author
Member

Oh boy.. we where using a blender build from about 2 weeks or so, that's all I can think of

Oh boy.. we where using a blender build from about 2 weeks or so, that's all I can think of

Added subscribers: @HenriqueGonzaga, @WilliamReynish

Added subscribers: @HenriqueGonzaga, @WilliamReynish

Added subscriber: @brecht

Added subscriber: @brecht

@mont29, from might be NULL if it was saved with a COW id.

Can we do a version patch to fix such broken from pointers?

@mont29, `from` might be `NULL` if it was saved with a COW id. Can we do a version patch to fix such broken `from` pointers?

@brecht actually, was thinking about doing a systematic check on load for that, and also add a check for that issue on write (in our optional 'check file validity' that was also used to track down the library issue at the studio).

Not sure which one is best, doing do_version only, or systematic check (at least for now), at read time?

@brecht actually, was thinking about doing a systematic check on load for that, and also add a check for that issue on write (in our optional 'check file validity' that was also used to track down the library issue at the studio). Not sure which one is best, doing do_version only, or systematic check (at least for now), at read time?

@mont29, always doing it as part of lib linking seems fine too.

At some point we should really make Key not a datablock anymore, it makes no sense, but it's probably somewhat tricky.

@mont29, always doing it as part of lib linking seems fine too. At some point we should really make `Key` not a datablock anymore, it makes no sense, but it's probably somewhat tricky.

This issue was referenced by da6bda6483

This issue was referenced by da6bda64839e91dea4e6a7c144f8ae30e2d9076b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60783
No description provided.